// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageLoad :  renders a snapshot of <ImageLoad /> with mock props at progress level 0 with no errors 1`] = `
<div
  className="w-full "
>
  <div
    className="flex flex-col"
  >
    <div
      className="flex items-center justify-between mb-2"
    >
      <h2
        className="text-xs font-normal text-gray-500 lowercase mb-0"
      >
        mockImageName
      </h2>
      <p
        className="text-xs mb-0 text-gray-500 cursor-pointer"
      >
        Cancel
      </p>
    </div>
    <div
      className="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default"
    >
      <div
        className="ant-progress-outer"
      >
        <div
          className="ant-progress-inner"
        >
          <div
            className="ant-progress-bg"
            style={
              Object {
                "background": undefined,
                "borderRadius": "",
                "height": "5px",
                "width": "0%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageLoad :  renders a snapshot of <ImageLoad /> with mock props at progress level 80 with no errors 1`] = `
<div
  className="w-full "
>
  <div
    className="flex flex-col"
  >
    <div
      className="flex items-center justify-between mb-2"
    >
      <h2
        className="text-xs font-normal text-gray-500 lowercase mb-0"
      >
        mockImageName
      </h2>
      <p
        className="text-xs mb-0 text-gray-500 cursor-pointer"
      >
        Cancel
      </p>
    </div>
    <div
      className="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default"
    >
      <div
        className="ant-progress-outer"
      >
        <div
          className="ant-progress-inner"
        >
          <div
            className="ant-progress-bg"
            style={
              Object {
                "background": undefined,
                "borderRadius": "",
                "height": "5px",
                "width": "80%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageLoad :  renders a snapshot of <ImageLoad /> with mock props at progress level 100 with no error 1`] = `
<div
  className="w-full "
>
  <div
    className="flex flex-col"
  >
    <div
      className="flex items-center justify-between mb-2"
    >
      <h2
        className="text-xs font-normal text-gray-500 lowercase mb-0"
      >
        mockImageName
      </h2>
      <p
        className="text-xs mb-0 text-green-500 cursor-pointer"
      >
        Completed
      </p>
    </div>
    <div
      className="ant-progress ant-progress-line ant-progress-status-success ant-progress-default"
    >
      <div
        className="ant-progress-outer"
      >
        <div
          className="ant-progress-inner"
        >
          <div
            className="ant-progress-bg"
            style={
              Object {
                "background": undefined,
                "borderRadius": "",
                "height": "5px",
                "width": "100%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
